[project]
name = "ads-26-spring-lab1"
version = "0.1.0"
description = "Lab1: Disk-persistent graph database with AI Skill integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.26.0",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-s"
testpaths = ["tests"]
